<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/thefinalslogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/search_edittext_background"
        android:hint="@string/search_by_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="#000"
        android:textColorHint="#666"
        app:layout_constraintEnd_toStartOf="@+id/refreshButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/search_edittext_background"
        android:text="@string/refresh"
        android:textColor="#666"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <FrameLayout
        android:id="@+id/favoriteFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        android:layout_marginTop="12dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/case_rounded_background"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <ProgressBar
            android:id="@+id/favoriteProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/textColor"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/tableContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/case_rounded_background"
        app:layout_constraintTop_toBottomOf="@id/favoriteFrameLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank"
                android:textColor="#F5F5F5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/last_24h"
                android:textColor="#F5F5F5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#F5F5F5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fame"
                android:textColor="#F5F5F5" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"/>

        <FrameLayout
            android:id="@+id/leaderboardFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/favoriteFrameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboardRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <ProgressBar
                android:id="@+id/leaderboardProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/textColor"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
