<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PlayerDetailsActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/todo"
        android:padding="12dp"
        android:src="@drawable/round_arrow_back_24"
        android:tint="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/favoriteCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:button="@drawable/selector_favorite_checkbox"
        android:buttonTint="@color/textColor"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backButton" />


    <LinearLayout
        android:id="@+id/worldRankContainer"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="@drawable/case_rounded_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/embarkContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:id="@+id/worldRankHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/world_rank_tab"
            android:textColor="#F5F5F5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <TextView
            android:id="@+id/worldRankValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/world_rank" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rankChangeContainer"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:background="@drawable/case_rounded_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/worldRankContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/worldRankContainer"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/RankChangeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/last_24h"
            android:textColor="#F5F5F5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <TextView
            android:id="@+id/rankChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/rank_change"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- Xbox Name Container -->
    <LinearLayout
        android:id="@+id/embarkContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/embark"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/embarkPseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/embark_pseudo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/embarkContainer">

        <!-- Steam Name Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/case_rounded_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/steam"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/steamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/steam_name"
                android:textColor="#F5F5F5" />
        </LinearLayout>

        <!-- Xbox Name Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/case_rounded_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/xbox"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/xboxName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/xbox_name"
                android:textColor="#F5F5F5" />
        </LinearLayout>

        <!-- PSN Name Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/case_rounded_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/psn"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/psnName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/psn_name"
                android:textColor="#F5F5F5" />
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/rankIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:src="@drawable/d1"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rankChangeContainer"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>
